Fixing spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,10 @@ main {
   ul#pieces {
     list-style-type: none;
     list-style-position: inside;
+
+    li.piece {
+      line-height: 1.2rem;
+    }
   }
 }
 
